Generated keycloat client secret #4191